--- a/main.html
+++ b/main.html
@@ -7,6 +7,40 @@
 </head>
 
 <body>
+	 
+  <!-- Header Section -->
+  <header class="header">
+    <h1>News Today</h1>
+  </header>
+
+  <!-- Latest News Section -->
+<div class="flex">
+  <div class="latest-news-section">
+	
+    <h2>Latest News</h2>
+    <ul>
+      <li>Breaking News: Global Markets Surge</li>
+      <li>Technology: New Advancements in AI</li>
+      <li>Sports: Champions League Final Results</li>
+    </ul>
+  </div>
+
+	<div class="center">
+		<h2>Main Artical</h2>
+		<p>Breaking News: Global Markets Surge
+Technology: New Advancements in AI
+Sports: Champions League Final Results</p>
+	</div>
+  <!-- Pictorial News Section -->
+  <div class="pictorial-news-section">
+    <h3>Pictorial News</h3>
+    <div class="news-images">
+      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News Image One">
+      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="News Image Two">
+      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="News Image Three">
+    </div>
+  </div>
+</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
